fixed footer alignment

--- a/style.css
+++ b/style.css
@@ -89,7 +89,6 @@ color: white;
   display: flex;
   z-index: 1;
   padding-top: 80px;
-  display: flex;
   width: 1232px;
   margin: 0 auto 78px auto;
 }
@@ -174,6 +173,7 @@ footer {
   justify-content: center;
   width: 100%;
   height: 325px;
+  margin: auto;
   position: fixed;
   z-index: 1;
   background-color: MediumAquamarine;
@@ -182,6 +182,16 @@ footer {
   font-size: 12px;
   padding: 30px 0;
   bottom: 0px;
+}
+
+.copyright {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  padding-top: 50px;
+  justify-content: center;
+  color: black;
+
 }
 
 .footermenu {
